deploy/K8S/Envoy/envoy-depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-gateway-clusterip-srv
  labels:
    app: envoy-gateway
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 10000
    targetPort: http
    protocol: TCP
  selector:
    app: envoy-gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-gateway-depl
  labels:
    app: envoy-gateway
spec:
  selector:
    matchLabels:
      app: envoy-gateway
  template:
    metadata:
      labels:
        app: envoy-gateway
    spec:
      containers:
      - name: envoy-gateway
        image: kfanil/envoygateway:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 10000
        - name: envoy-admin
          containerPort: 9901
