deploy/K8S/Envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/t"
                route:
                  prefix_rewrite: "/"
                  cluster: test_service
              - match:
                  prefix: "/api/auth/register"
                route:
                  prefix_rewrite: "/api/auth/register"
                  cluster: auth_service
              - match:
                  prefix: "/api/auth/login"
                route:
                  prefix_rewrite: "/api/auth/login"
                  cluster: auth_service
              - match:
                  prefix: "/hub/commentsnotificationhub"
                route:
                  prefix_rewrite: "/hub/commentsnotificationhub"
                  cluster: comment_signalr_hub
              - match:
                  prefix: "/graphql"
                route:
                  prefix_rewrite: "/graphql"
                  cluster: aggregation_service
              - match:
                  prefix: "/"
                route:
                  prefix_rewrite: "/"
                  cluster: coffee_service
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: coffee_service
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: coffee_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: reactapp-clusterip-srv
                port_value: 3000
  - name: test_service
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: test_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: www.google.com
                port_value: 80
  - name: auth_service
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: auth_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: auth-service-clusterip-srv
                port_value: 80
  - name: aggregation_service
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: aggregation_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: aggregator-service-clusterip-srv
                port_value: 80
  - name: comment_signalr_hub
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: comment_signalr_hub
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: comment-signalr-hub-clusterip-srv
                port_value: 80
